# openmom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenMoM.xcodeproj/: project.pbxproj
cmake/: FindSDL2.cmake  FindSDL2_Image.cmake  tests.md
data/gfx/city/: production-item.psd
data/gfx/city/scape/: houses.psd
data/gfx/font/: font-crypt-big.psd  font-huge-serif.psd  font-medium.psd  font-merged.psd  font-tiny-compact-crypt.psd  font.psd  pngcrush.txt
data/lbx/: terrain.lbx
data/yaml/: buildings.yaml  english.yaml  help.yaml  levels.yaml  races.yaml  skills.yaml  spells.yaml  test.yaml  units.yaml  wizards.yaml
docs/: help.txt
docs/lbx/: fonts.md  gfx.md  help.md  terrain.md  terrtype.md
editor/openmom/: .classpath  .project  liblbx.dylib  pom.xml
editor/openmom/src/main/java/com/github/jakz/openmom/: App.java  Data.java  Parsers.java
libs/SDL2_image.framework/Versions/A/: SDL2_image
libs/fltk/lib/win_x64/: fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
libs/yaml/include/yaml-cpp/: exceptions.h  parser.h
libs/yaml/include/yaml-cpp/node/: impl.h  node.h
libs/yaml/include/yaml-cpp/node/detail/: impl.h  iterator.h  node.h  node_iterator.h
libs/yaml/lib/win_x64/: yaml-cpp.lib
libs/yaml/lib/win_x86/: yaml-cpp.lib
misc/: OpenMoM-Info.plist
projects/vs2017/: Configuration.props  OpenMoM.sln
projects/vs2017/Code/: Code.vcxitems  Code.vcxitems.filters
projects/vs2017/LbxLibrary/: LbxLibrary.vcxproj  LbxLibrary.vcxproj.filters
projects/vs2017/LbxViewer/: LbxViewer.vcxproj  LbxViewer.vcxproj.filters
projects/vs2017/OpenMoM/: OpenMoM.sln  OpenMoM.vcxproj  OpenMoM.vcxproj.filters
projects/vs2017/Tests/: Tests.vcxproj  Tests.vcxproj.filters
projects/xcode/: .gitignore  Config.xcconfig
projects/xcode/OpenMoM.xcodeproj/: project.pbxproj
projects/xcode/OpenMoM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/OpenMoM.xcodeproj/xcshareddata/xcschemes/: OpenMoM.xcscheme
projects/xcode/ccache/: ccache-clang  ccache-clang++
src/: CMakeLists.txt  Common.cpp  Common.h  SDL.cpp  SDL.h  main.cpp
src/common/: CMakeLists.txt  Common.cpp  Common.h  Enums.h  Typedefs.h  Types.h  Util.cpp  Util.h  format.cc  format.h  mystrings.cpp  mystrings.h  strings.cpp  strings.h
src/common/fmt/: format.cc  format.h
src/editor/: main.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.h  Settings.cpp  Settings.h
src/game/cities/: Buildings.cpp  Buildings.h  CMakeLists.txt  City.cpp  City.h
src/game/combat/: CMakeLists.txt  Combat.cpp  Combat.h  CombatMap.cpp  CombatMap.h  CombatMechanics.cpp  CombatMechanics.h  CombatUtils.cpp  CombatUtils.h
src/game/common/: Upkeep.h
src/game/data/: Settings.cpp  Settings.h
src/game/mechanics/: CMakeLists.txt  CityMechanics.cpp  CityMechanics.h  EventMechanics.cpp  EventMechanics.h  LairMechanics.cpp  LairMechanics.h  MapMechanics.cpp  MapMechanics.h  PlayerMechanics.cpp  PlayerMechanics.h  SpellMechanics.cpp  SpellMechanics.h  ValuesMechanics.cpp  ValuesMechanics.h
src/game/players/: CMakeLists.txt  Diplomacy.cpp  Diplomacy.h  LocalPlayer.cpp  LocalPlayer.h  Messages.cpp  Messages.h  Player.cpp  Player.h  Race.cpp  Race.h  Wizard.h
src/game/skills/: CMakeLists.txt  Effects.cpp  Effects.h  Modifiers.cpp  Modifiers.h  Skill.cpp  Skill.h  SkillSet.cpp  SkillSet.h  UnitEffects.cpp  UnitEffects.h
src/game/spells/: CMakeLists.txt  CombatSpells.cpp  CombatSpells.h  SkillSet.cpp  SkillSet.h  SpellBook.cpp  SpellBook.h  Spells.cpp  Spells.h
src/game/units/: Army.cpp  Army.h  CMakeLists.txt  Effects.cpp  Effects.h  Items.cpp  Items.h  Level.cpp  Level.h  Skill.cpp  Skill.h  Unit.cpp  Unit.h  UnitSpec.cpp  UnitSpec.h
src/game/world/: CMakeLists.txt  Pathfind.cpp  Pathfind.h  Places.cpp  Places.h  Tile.cpp  Tile.h  Util.cpp  Util.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h
src/gfx/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  Font.cpp  Font.h  GUISettings.cpp  GUISettings.h  Gfx.cpp  Gfx.h  Hqx.cpp  Hqx.h  LBX.cpp  LBX.h  LBXRepository.cpp  LBXRepository.h  SDLHelper.cpp  SDLHelper.h  Texture.cpp  Texture.h
src/gfx/filters/: Hqx.h  hq2x.cpp  hq3x.cpp  hq4x.cpp  hqx_init.cpp
src/i18n/: CMakeLists.txt  Help.cpp  Help.h  Localization.cpp  Localization.h
src/lbx/: lbxlib.cpp  lbxlib.h  main.cpp
src/platform/: CMakeLists.txt  Path.cpp  Path.h  Platform.h  osx.mm  platform.h  unix.cpp
src/platform/macos/: osx.mm  precompiled.pch
src/platform/windows/: Precompiled.cpp  Precompiled.h  dirent.h  main.cpp  windows.cpp
src/save/: CMakeLists.txt  Data.cpp  Data.h  OriginalSave.cpp  OriginalSave.h  YAML.cpp  YAML.h
src/tests/: catch.hpp  main.cpp  tests.cpp  tests.h
src/ui/: Animations.cpp  Animations.h  Buttons.cpp  Buttons.h  CMakeLists.txt  EventListener.h  GfxData.cpp  GfxData.h  View.cpp  View.h  ViewManager.cpp  ViewManager.h
src/ui/animations/: Animations.cpp  Animations.h  CMakeLists.txt  SpellEffectAnim.cpp  SpellEffectAnim.h
src/ui/parts/: BookView.cpp  BookView.h  CMakeLists.txt  CityScape.cpp  CityScape.h  CommonDraw.cpp  CommonDraw.h  Dialogs.cpp  Dialogs.h  DrawQueue.cpp  DrawQueue.h  DrawQueueBasic.h  MiniMap.cpp  MiniMap.h  SkillDraw.cpp  SkillDraw.h  UnitDraw.cpp  UnitDraw.h  Viewport.cpp  Viewport.h
src/ui/views/: AlchemyView.cpp  AlchemyView.h  ArmiesItemsView.cpp  ArmiesItemsView.h  ArmiesView.cpp  ArmiesView.h  ArmyView.cpp  ArmyView.h  AstrologerView.cpp  AstrologerView.h  CMakeLists.txt  CartographerView.cpp  CartographerView.h  CitiesView.cpp  CitiesView.h  CityView.cpp  CityView.h  CombatView.cpp  CombatView.h  ConsoleView.cpp  ConsoleView.h  DiplomacyView.cpp  DiplomacyView.h  HelpView.cpp  HelpView.h  HistorianView.cpp  HistorianView.h  InfoMenuView.cpp  InfoMenuView.h  IntroView.cpp  IntroView.h  ItemCraftChargesView.cpp  ItemCraftChargesView.h  ItemCraftView.cpp  ItemCraftView.h  LbxView.cpp  LbxView.h  LoadView.cpp  LoadView.h  MagicView.cpp  (+25 more)
src/ui/views/debug/: CMakeLists.txt  DataView.cpp  DataView.h
src/ui/views/extra/: CMakeLists.txt  MapEditorView.cpp  MapEditorView.h
(+44 files in other folders)
